--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
-[package]
-name = "rust_gol"
-version = "0.1.0"
-authors = ["Pascal Winkelmann <pascal@wnklmnn.de>"]
+[workspace]
 
-[dependencies]
+members = [
+    "lib",
+    "gol_piston",
+]
+
